fixes alignment of text and button in academy.php

--- a/css/academy.css
+++ b/css/academy.css
@@ -24,37 +24,31 @@ h2,h3 {
   width: 100%;
   height: 100%;
   position: absolute;
-  /* top: 0;
-    left: 0; */
-  /* opacity: 90%; */
 }
 
 .course_content {
   z-index: 1;
   margin: 30px;
+  width: fit-content;
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 .course_content > h4 {
   color: white;
-  width: fit-content;
   margin: 0px;
   margin-bottom: 10px;
   z-index: 1;
 }
 
 .course_content > button {
-  /* position: absolute; */
   background-color: #601e12;
   color: white;
-  width: fit-content;
   margin: 0px;
   z-index: 1;
-  /* top: 60%;
-    left: 39%; */
   font-weight: bold;
   font-stretch: ultra-condensed;
   border-radius: 5px;
-  /* transform: translate(-50%, -50%) */
 }
 
 .course_content > button,
